# namixcode_backend

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: __main__.py  settings.py
app/application/api/: __init__.py  api.py  dependencies.py  middlewares.py
app/application/api/endpoints/: __init__.py  apply.py  org.py  user.py
app/application/api/schemas/: analyze.py  apply.py  auth.py  employee.py  job.py  org.py  status.py  user.py
app/container/: __init__.py  container.py
app/container/providers/: __init__.py  default.py  infrastructure.py  logic.py
app/domain/entities/: analyze.py  apply.py  auth.py  base.py  employee.py  job.py  org.py  user.py
app/domain/exceptions/: base.py
app/domain/values/: user.py
app/infrastructure/repositories/: apply.py  employee.py  job.py  org.py  user.py
app/infrastructure/services/: gpt_tarologue.py
app/logic/commands/: base.py
app/logic/commands/apply/: accept_apply.py  create_apply.py
app/logic/commands/auth/: decode_jwt.py  generate_jwt.py
app/logic/commands/job/: create_job.py
app/logic/commands/org/: create_org.py
app/logic/commands/user/: create_user.py
app/logic/exceptions/: apply.py  auth.py  base.py  employee.py  job.py  org.py  user.py
app/logic/queries/: base.py  org.py
app/logic/queries/apply/: get_applies.py  get_org_applies.py  get_user_applies.py
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  ingress.yaml  migration_job.yaml  service.yaml
(+29 files in other folders)
